--- a/DotNetVault.Vsix/DotNetVault.Vsix.csproj
+++ b/DotNetVault.Vsix/DotNetVault.Vsix.csproj
@@ -56,6 +56,9 @@
     <StartArguments>/rootsuffix Roslyn</StartArguments>
   </PropertyGroup>
   <ItemGroup>
+    <None Include="..\DotNetVault\.editorconfig">
+      <Link>.editorconfig</Link>
+    </None>
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
     </None>
