--- a/DotNetVault/DotNetVault.csproj
+++ b/DotNetVault/DotNetVault.csproj
@@ -15,7 +15,7 @@
 
   <PropertyGroup>
     <PackageId>DotNetVault</PackageId>
-    <PackageVersion>0.2.2.1-beta</PackageVersion>
+    <PackageVersion>0.2.2.12-beta</PackageVersion>
     <Authors>Christopher Susie</Authors>
     <PackageLicenseUrl></PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/cpsusie/DotNetVault</PackageProjectUrl>
@@ -30,24 +30,26 @@
       A full project description is included in "DotNetVault Description.pdf".  Source code, example projects, unit tests, stress test and quick start guide on GitHub.
 </Description>
     <PackageReleaseNotes>
-      RELEASE NOTES VERSION 0.2.2.1-beta:
+      RELEASE NOTES VERSION 0.2.2.12-beta:
 
-        A BigValueListVault added, providing a vault protecting a list-like collection, especially suited for large value types. 
+      Fixed a Bug 92 where copying a protected resource into another ref-struct declared in a larger scope (of the same type or containing a field at any level of nesting in its graph) could result in unsynchronized access.
 
-        Unit tests added, including a stress test called Cafe Babe game.  The Cafe Babe game is a unit test and stand-alone console-driven stress testing utility.
+      Fix was accomplished by the addition of more analyzer rules and attributes that can trigger them.
 
-        "DotNetVault.Description.pdf" updated to reflect changes.
-</PackageReleaseNotes>
+      Unit tests were added to validate the fix and code was added to the ExampleCodePlayground demonstrating Bug92.
+
+      A full description of Bug 92, the new attributes and analyzer rules is available now in "DotNetVault Description.pdf".
+    </PackageReleaseNotes>
     <Copyright>Copyright © 2019-2020 CJM Screws, LLC</Copyright>
     <PackageTags>DotNetVault, analyzers, synchronization, thread-safety, threadsafe, deadlock, deadlock-prevention</PackageTags>
     <NoPackageAnalysis>true</NoPackageAnalysis>
     <LangVersion>8.0</LangVersion>
-    <Version>0.2.2.1</Version>
+    <Version>0.2.2.12</Version>
     <AssemblyName>DotNetVault</AssemblyName>
     <RootNamespace>DotNetVault</RootNamespace>
     <Company>CJM Screws, LLC</Company>
-    <AssemblyVersion>0.2.2.1</AssemblyVersion>
-    <FileVersion>0.2.2.1</FileVersion>
+    <AssemblyVersion>0.2.2.12</AssemblyVersion>
+    <FileVersion>0.2.2.12</FileVersion>
     <PackageLicenseFile>license.txt</PackageLicenseFile>
   </PropertyGroup>
 
@@ -58,6 +60,7 @@
     <LangVersion>8.0</LangVersion>
     <WarningsAsErrors />
     <DefineConstants></DefineConstants>
+    <NoWarn>1701;1702;RS2008</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -93,9 +96,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
-    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="2.9.6" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.3.1" PrivateAssets="all" />
+    <PackageReference Include="JetBrains.Annotations" Version="2020.1.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.0" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.7.0" PrivateAssets="all" />
     <PackageReference Update="NETStandard.Library" PrivateAssets="all" />
   </ItemGroup>
 
