--- a/CafeBabeGame/CafeBabeGame/CafeBabeGame.csproj
+++ b/CafeBabeGame/CafeBabeGame/CafeBabeGame.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup Label="Globals">
     <SccProjectName>SAK</SccProjectName>
@@ -13,7 +13,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNetVault" Version="0.2.2.12-beta" />
+    <PackageReference Include="DotNetVault" Version="0.2.4-alpha" />
     <PackageReference Include="HighPrecisionTimeStamps" Version="0.0.1-alpha" />
   </ItemGroup>
 
