--- a/Clorton Game/ClortonGameDemo/ClortonGameDemo.csproj
+++ b/Clorton Game/ClortonGameDemo/ClortonGameDemo.csproj
@@ -13,7 +13,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNetVault" Version="0.2.2.12-beta" />
+    <PackageReference Include="DotNetVault" Version="0.2.4-alpha" />
     <PackageReference Include="HighPrecisionTimeStamps" Version="0.0.1-alpha" />
   </ItemGroup>
 
