--- a/ExampleLaundryMachine/LaundryStressTest/LaundryStressTest.csproj
+++ b/ExampleLaundryMachine/LaundryStressTest/LaundryStressTest.csproj
@@ -14,7 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNetVault" Version="0.2.2.12-beta" />
+    <PackageReference Include="DotNetVault" Version="0.2.4-alpha" />
   </ItemGroup>
 
   <ItemGroup>
