--- a/DotNetVault/DotNetVault.csproj
+++ b/DotNetVault/DotNetVault.csproj
@@ -15,11 +15,10 @@
 
   <PropertyGroup>
     <PackageId>DotNetVault</PackageId>
-    <PackageVersion>0.2.4.0-alpha</PackageVersion>
+    <PackageVersion>0.2.4.1-alpha</PackageVersion>
     <Authors>Christopher Susie</Authors>
-    <PackageLicenseUrl></PackageLicenseUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/cpsusie/DotNetVault</PackageProjectUrl>
-    <PackageIconUrl></PackageIconUrl>
     <RepositoryUrl>https://github.com/cpsusie/DotNetVault</RepositoryUrl>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <Description>
@@ -44,13 +43,13 @@
     <PackageTags>DotNetVault, analyzers, synchronization, thread-safety, threadsafe, deadlock, deadlock-prevention</PackageTags>
     <NoPackageAnalysis>true</NoPackageAnalysis>
     <LangVersion>8.0</LangVersion>
-    <Version>0.2.4.0</Version>
+    <Version>0.2.4.1</Version>
     <AssemblyName>DotNetVault</AssemblyName>
     <RootNamespace>DotNetVault</RootNamespace>
     <Company>CJM Screws, LLC</Company>
-    <AssemblyVersion>0.2.4.0</AssemblyVersion>
-    <FileVersion>0.2.4.0</FileVersion>
-    <PackageLicenseFile>license.txt</PackageLicenseFile>
+    <AssemblyVersion>0.2.4.1</AssemblyVersion>
+    <FileVersion>0.2.4.1</FileVersion>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -80,7 +79,7 @@
     <EmbeddedResource Remove="Resources\**" />
     <None Remove="bin\**" />
     <None Remove="Resources\**" />
-    <None Include="..\DotNetVault Description.docx" Link="DotNetVault Description.docx" />
+    <None Remove="license.txt" />
     <None Include="..\license.txt">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
@@ -118,27 +117,12 @@
     <None Include="$(OutputPath)\$(AssemblyName).xml" Pack="true" PackagePath="lib/netstandard2.0/" Visible="true" />
   </ItemGroup>
   <ItemGroup>
-    <None Update="license.txt">
+   <None Update="readme.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <Pack>True</Pack>
       <Visible>True</Visible>
     </None>
-    <None Update="DotNetVault Quick Start Guide Windows Vs 2019.pdf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <Pack>True</Pack>
-      <Visible>True</Visible>
-    </None>
-    <None Update="DotNetVault Quick Start Guide Linux Rider 2019.3.1 -- (Amazon Linux).pdf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <Pack>True</Pack>
-      <Visible>True</Visible>
-    </None>
-    <None Update="readme.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <Pack>True</Pack>
-      <Visible>True</Visible>
-    </None>
-    <None Update="DotNetVault Description.pdf">
+    <None Update="README.md">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <Pack>True</Pack>
       <Visible>True</Visible>
