--- a/DotNetVaultQuickStart/DotNetVaultQuickStart.csproj
+++ b/DotNetVaultQuickStart/DotNetVaultQuickStart.csproj
@@ -21,6 +21,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="C:\Users\Christopher Susie\.nuget\packages\dotnetvault\0.2.4-alpha\contentFiles\any\netstandard2.0\DotNetVault Description.pdf" />
+    <None Remove="C:\Users\Christopher Susie\.nuget\packages\dotnetvault\0.2.4-alpha\contentFiles\any\netstandard2.0\DotNetVault Quick Start Guide Linux Rider 2019.3.1 -- %28Amazon Linux%29.pdf" />
+    <None Remove="C:\Users\Christopher Susie\.nuget\packages\dotnetvault\0.2.4-alpha\contentFiles\any\netstandard2.0\DotNetVault Quick Start Guide Windows Vs 2019.pdf" />
     <None Remove="~%24tNetVault Quick Start Guide.docx" />
   </ItemGroup>
 
