Updated ancillary / demo projects to reference v 0.2.5.0

--- a/CafeBabeGame/CafeBabeGame/CafeBabeGame.csproj
+++ b/CafeBabeGame/CafeBabeGame/CafeBabeGame.csproj
@@ -13,7 +13,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNetVault" Version="0.2.4-alpha" />
+    <PackageReference Include="DotNetVault" Version="0.2.5" />
     <PackageReference Include="HighPrecisionTimeStamps" Version="0.0.1-alpha" />
   </ItemGroup>
 
