--- a/ExampleLaundryMachine/LaundryMachine/LaundryMachine.csproj
+++ b/ExampleLaundryMachine/LaundryMachine/LaundryMachine.csproj
@@ -24,7 +24,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNetVault" Version="0.2.4-alpha" />
+    <PackageReference Include="DotNetVault" Version="0.2.5" />
     <PackageReference Include="JetBrains.Annotations" Version="2020.1.0" />
   </ItemGroup>
 
