--- a/DotNetVault/DotNetVault.csproj
+++ b/DotNetVault/DotNetVault.csproj
@@ -22,7 +22,7 @@
 
   <PropertyGroup>
     <PackageId>DotNetVault</PackageId>
-    <PackageVersion>0.2.5.2-alpha</PackageVersion>
+    <PackageVersion>0.2.5.3</PackageVersion>
     <Owners>CJM Screws, LLC</Owners>
     <Authors>Christopher Susie</Authors>
     <PackageProjectUrl>https://github.com/cpsusie/DotNetVault</PackageProjectUrl>
@@ -42,14 +42,13 @@
       A guided tour / quick start guide for this project's functionality can be found here: https://github.com/cpsusie/DotNetVault/blob/v0.2.5.x/Quick_Start_Functionality_Tour.md 
     </Description>
     <PackageReleaseNotes>
-      RELEASE NOTES VERSION 0.2.5.1:
+
+      RELEASE NOTES VERSION 0.2.5.3:
+
+      * Fixed problem with SourceLink not working correctly.
+      * Fixed bug (Issue #2) that would throw a recursion exception sometimes when, using certain combinations of overloads, acquiring upgradable readonly locks then upgrading them would throw a lock recursion exception.
+      * Update the quick start functionality tour and installation guides to use pictures reflecting more recent versions.
       
-      No significant changes to code in this release.
-
-      Resolved broken links displayed on project's NuGet page.
-
-      Fixed problem with license on NuGet.
-
       RELEASE NOTES VERSION 0.2.5.0:
 
       The last official release was version [0.1.5.4](https://github.com/cpsusie/DotNetVault/releases/tag/v0.1.5.4),
@@ -73,12 +72,12 @@
     <PackageTags>DotNetVault, analyzers, synchronization, thread-safety, threadsafe, deadlock, deadlock-prevention</PackageTags>
     <NoPackageAnalysis>true</NoPackageAnalysis>
     <LangVersion>8.0</LangVersion>
-    <Version>0.2.5.2</Version>
+    <Version>0.2.5.3</Version>
     <AssemblyName>DotNetVault</AssemblyName>
     <RootNamespace>DotNetVault</RootNamespace>
     <Company>CJM Screws, LLC</Company>
-    <AssemblyVersion>0.2.5.2</AssemblyVersion>
-    <FileVersion>0.2.5.2</FileVersion>
+    <AssemblyVersion>0.2.5.3</AssemblyVersion>
+    <FileVersion>0.2.5.3</FileVersion>
     <PackageLicenseFile>license.txt</PackageLicenseFile>
   </PropertyGroup>
 
