--- a/ConsoleStressTest/ConsoleStressTest.csproj
+++ b/ConsoleStressTest/ConsoleStressTest.csproj
@@ -17,7 +17,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNetVault" Version="0.2.5.3" />
+    <PackageReference Include="DotNetVault" Version="0.2.5.7-alpha" />
+    <PackageReference Include="HighPrecisionTimeStamps" Version="0.1.0" />
+    <PackageReference Include="System.Collections.Immutable" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
