--- a/ExampleLaundryMachine/LaundryMachine/LaundryMachine.csproj
+++ b/ExampleLaundryMachine/LaundryMachine/LaundryMachine.csproj
@@ -24,8 +24,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNetVault" Version="0.2.5.3" />
-    <PackageReference Include="JetBrains.Annotations" Version="2020.1.0" />
+    <PackageReference Include="DotNetVault" Version="0.2.5.7-alpha" />
+    <PackageReference Include="HighPrecisionTimeStamps" Version="0.1.0" />
+    <PackageReference Include="JetBrains.Annotations" Version="2020.3.0" />
+    <PackageReference Include="System.Collections.Immutable" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
