--- a/ExampleCodePlayground/ExampleCodePlayground.csproj
+++ b/ExampleCodePlayground/ExampleCodePlayground.csproj
@@ -42,7 +42,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNetVault" Version="0.2.5.7-alpha" />
+    <PackageReference Include="DotNetVault" Version="0.2.5.8" />
     <PackageReference Include="HighPrecisionTimeStamps" Version="0.1.0" PrivateAssets="All" GeneratePathProperty="true" />
     <PackageReference Include="JetBrains.Annotations" Version="2020.3.0" />
     <PackageReference Include="System.Collections.Immutable" Version="5.0.0" />
