Updated to 0.2.5.10-beta, DotNetVault updated to use HpTimeStamps 0.1.1.0-beta, All ancillary apps set to use DNV 0.2.5.10-beta and HPTS 0.1.1.0-beta

--- a/DotNetVault.Test/DotNetVault.Test.csproj
+++ b/DotNetVault.Test/DotNetVault.Test.csproj
@@ -96,7 +96,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="HighPrecisionTimeStamps" Version="0.1.0" />
+    <PackageReference Include="HighPrecisionTimeStamps" Version="0.1.1-beta" />
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
