--- a/ExampleLaundryMachine/LaundryStressTest/LaundryStressTest.csproj
+++ b/ExampleLaundryMachine/LaundryStressTest/LaundryStressTest.csproj
@@ -14,8 +14,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNetVault" Version="0.2.5.9" />
-    <PackageReference Include="HighPrecisionTimeStamps" Version="0.1.0" />
+    <PackageReference Include="DotNetVault" Version="0.2.5.10-beta" />
+    <PackageReference Include="HighPrecisionTimeStamps" Version="0.1.1-beta" />
+    <PackageReference Include="JetBrains.Annotations" Version="2021.2.0" />
     <PackageReference Include="System.Collections.Immutable" Version="5.0.0" />
   </ItemGroup>
 
